compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__panic__as_expression.snap
---
source: compiler-core/src/javascript/tests/panic.rs
assertion_line: 39
expression: "\nfn go(f) {\n  let boop = panic\n  f(panic)\n}\n"
---
import { makeError } from "../rakun.mjs";

function go(f) {
  let boop = (() => {
    throw makeError(
      "panic",
      "my/mod",
      3,
      "go",
      "`panic` expression evaluated.",
      {}
    )
  })();
  return f(
    (() => {
      throw makeError(
        "panic",
        "my/mod",
        4,
        "go",
        "`panic` expression evaluated.",
        {}
      )
    })(),
  );
}
