compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__panic__bare.snap
---
source: compiler-core/src/javascript/tests/panic.rs
expression: "\nfn go() {\n  panic\n}\n"
---
----- SOURCE CODE

fn go() {
  panic
}


----- COMPILED JAVASCRIPT
import { makeError } from "../rakun.mjs";

function go() {
  throw makeError(
    "panic",
    "my/mod",
    3,
    "go",
    "`panic` expression evaluated.",
    {}
  )
}
