compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__panic__case.snap
---
source: compiler-core/src/javascript/tests/panic.rs
expression: "\nfn go(x) {\n  case x {\n    _ -> panic\n  }\n}\n"
---
----- SOURCE CODE

fn go(x) {
  case x {
    _ -> panic
  }
}


----- COMPILED JAVASCRIPT
import { makeError } from "../rakun.mjs";

function go(x) {
  {
    throw makeError(
      "panic",
      "my/mod",
      4,
      "go",
      "`panic` expression evaluated.",
      {}
    )
  }
}
