compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__panic__panic_as.snap
---
source: compiler-core/src/javascript/tests/panic.rs
expression: "\nfn go() {\n  let x = \"wibble\"\n  panic as x\n}\n"
---
----- SOURCE CODE

fn go() {
  let x = "wibble"
  panic as x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../rakun.mjs";

function go() {
  let x = "wibble";
  throw makeError("panic", "my/mod", 4, "go", x, {})
}
