compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__panic__pipe.snap
---
source: compiler-core/src/javascript/tests/panic.rs
expression: "\nfn go(f) {\n  f |> panic\n}\n"
---
----- SOURCE CODE

fn go(f) {
  f |> panic
}


----- COMPILED JAVASCRIPT
import { makeError } from "../rakun.mjs";

function go(f) {
  let _pipe = f;
  return (() => {
    throw makeError(
      "panic",
      "my/mod",
      3,
      "go",
      "`panic` expression evaluated.",
      {}
    )
  })()(_pipe);
}
