compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__panic__sequence.snap
---
source: compiler-core/src/javascript/tests/panic.rs
expression: "\nfn go(at_the_disco) {\n  panic\n  at_the_disco\n}\n"
---
----- SOURCE CODE

fn go(at_the_disco) {
  panic
  at_the_disco
}


----- COMPILED JAVASCRIPT
import { makeError } from "../rakun.mjs";

function go(at_the_disco) {
  throw makeError(
    "panic",
    "my/mod",
    3,
    "go",
    "`panic` expression evaluated.",
    {}
  )
  return at_the_disco;
}
